--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,16 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id('kotlin-android-extensions')
 }
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
+
+    androidExtensions {
+        experimental = true
+    }
 
     defaultConfig {
         applicationId "com.cst.todotasks"
